--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-	<title>Blawg.js</title>
+  <title>Blawg.js</title>
 
   <link rel="stylesheet" href="stylesheets/blawg.css">
 </head>
 <body>
-  <div id="blog" class="sixteen columns"></div>
+  <div id="blawg"></div>
 
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="scripts/blawg.js"></script>
 </body>
 </html>
